// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorAssetChildrenNode test asset tree node->isShowChildren render material sphere's snapshot render default snapshot test render after add material test snapshot 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/mat.jpg"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        New Material
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetChildrenNode test asset tree node->isShowChildren render material sphere's snapshot render updated snapshot test render after drag texture test snapshot 1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/mat.jpg"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        material1
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="data:image/png;base64 for img-canvas"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        New Material
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="newImgBase64"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        loadImg
      </span>
    </div>
  </article>
</article>
`;

exports[`MainEditorAssetChildrenNode test show order 
        order should be:
        1)for different type_:folder,wdb,material,texture;
        2)for the same type_:sort by firstname alphabetically
         1`] = `
<article
  className="wonder-asset-assetChildren"
>
  <article
    className="wonder-asset-folderBox"
    id="folder-5"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        AFolder
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-folderBox"
    id="folder-3"
    style={
      Object {
        "border": "0px",
      }
    }
  >
    <div
      className="item-ground"
      draggable={true}
      onDragEnd={[Function]}
      onDragEnter={[Function]}
      onDragLeave={[Function]}
      onDragOver={[Function]}
      onDragStart={[Function]}
      onDrop={[Function]}
    />
    <div
      className="box-image"
    >
      <img
        src="./public/img/assetPackage.png"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        FFolder
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/mat.jpg"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        AMaterial
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="./public/img/mat.jpg"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        CMaterial
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="newImgBase64"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        AImage
      </span>
    </div>
  </article>
  <article
    className="wonder-asset-fileBox "
    onClick={[Function]}
  >
    <div
      className="box-image"
    >
      <img
        onDragStart={[Function]}
        src="newImgBase64"
      />
    </div>
    <div
      className="item-text "
    >
      <span>
        BImage
      </span>
    </div>
  </article>
</article>
`;
